# quanta-terminal

./: .env.example  .gitignore  README.md
backend/: Makefile  README.md  pyproject.toml  railpack.json  railway.toml  render.yaml  test_mcp_servers.py
backend/agents/: analyst_agent.py  earnings_agent.py  finance_agent.py  graph.py  memo_writer.py  news_agent.py  research_agent.py  sec_agent.py  tech_agent.py
backend/api/: dependencies.py  main.py
backend/api/routes/: auth.py  chat.py  memo.py  stocks.py
backend/api/schemas/: memo.py
backend/core/: config.py  database.py  rate_limit.py  redis.py  security.py
backend/mcp_servers/: finance_mcp.py  news_mcp.py  research_mcp.py  sec_mcp.py
backend/prompts/: system_prompts.py
backend/supabase/migrations/: 001_create_memos.sql
frontend/: .env.local.example  next.config.mjs  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.server.config.ts  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/[...path]/: route.ts
frontend/app/auth/callback/: route.ts
frontend/app/memo/[ticker]/: page.tsx
frontend/components/auth/: LoginModal.tsx
frontend/components/memo/: AgentProgress.tsx  ChatSidebar.tsx  MemoViewer.tsx
frontend/components/ui/: Header.tsx  Skeleton.tsx
frontend/components/watchlist/: WatchlistTable.tsx
frontend/hooks/: useAuth.tsx  useTypewriter.ts
frontend/lib/: api.ts  supabase.ts  theme.ts
