[project]
name = "quanta-terminal-backend"
version = "0.1.0"
description = "Quanta Terminal — Emerging Compute Intelligence Platform"
requires-python = ">=3.11"

dependencies = [
    # Core framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.2",
    "python-dotenv>=1.0.1",
    # MCP
    "mcp>=1.0.0",
    "httpx>=0.27.2",
    # AI / Agents
    "langchain>=0.3.1",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.28",
    "langsmith>=0.1.129",
    # Vector store
    "pinecone-client>=5.0.1",
    "langchain-pinecone>=0.2.0",
    # Data sources
    "yfinance>=0.2.44",
    "requests>=2.32.3",
    "feedparser>=6.0.11",
    "arxiv>=2.1.3",
    # Background jobs
    "celery>=5.4.0",
    "redis>=5.1.1",
    # Database
    "sqlalchemy>=2.0.35",
    "alembic>=1.13.3",
    "asyncpg>=0.29.0",
    "supabase>=2.9.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Utilities
    "tenacity>=9.0.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "tiktoken>=0.7.0",
    "fastmcp>=3.4.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "api", "core", "mcp_servers"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
python_files = ["test_*.py"]
